--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Offline link check against local files; ignore docs/ snippets
+      # Offline link check to avoid network flakiness; ignore docs/ snippets
       - name: Link check (offline)
         uses: lycheeverse/lychee-action@v1
         with:
@@ -26,17 +26,8 @@ jobs:
         with:
           node-version: '20'
 
-      - name: HTML validate
+      - name: HTML validate (uses .htmlvalidate.json if present)
         run: npx --yes html-validate "**/*.html"
 
-      - name: Markdown lint
+      - name: Markdown lint (uses .markdownlint.yaml if present)
         run: npx --yes markdownlint-cli "**/*.md" --ignore node_modules
-
-      # Optional: Lighthouse against live site (enable later)
-      # - name: Lighthouse (live)
-      #   run: |
-      #     npx --yes @lhci/cli autorun \
-      #       --collect.url=https://sjones321.github.io/civ7-tracker/ \
-      #       --upload.target=filesystem \
-      #       --upload.outputDir=./lhci-report
-      #   if: github.ref == 'refs/heads/main'
