--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,3 +1,4 @@
 default: true
 MD013: false  # line length off for simplicity
 MD033: false  # inline HTML allowed
+MD041: false  # first line need not be a top-level heading
