feat: integrate Supabase for centralized data storage
- Replace localStorage with Supabase backend store
- Add store-supabase.js with async API methods
- Update data-wonders.html to use Supabase scripts
- Fix async/await handling in data-wonders.js
- Fix double brackets bug in bonus field icon placeholders
- Add comprehensive Supabase setup and integration docs
- Add database schema SQL for all game entities
- Add supabase-config.example.js template

Data now persists across devices and enables multi-user sharing.

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,7 @@ coverage/
 # markdownlint output (add these lines to your existing .gitignore)
 **/markdownlint.out
 
+# Supabase config (contains API keys - NEVER commit)
+js/supabase-config.js
+
 # END PACK: .gitignore (civ7-tracker)
