feat: commit Supabase config for GitHub Pages deployment
- Add js/supabase-config.js to repo (anon key is safe to be public)
- Remove from .gitignore to enable GitHub Pages deployment
- Update comments to explain why it's committed
- Anon key is designed for client-side use with RLS protection

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ coverage/
 # markdownlint output (add these lines to your existing .gitignore)
 **/markdownlint.out
 
-# Supabase config (contains API keys - NEVER commit)
-js/supabase-config.js
+# Supabase config: Now committed to repo for GitHub Pages deployment
+# The anon key is safe to be public - it's designed for client-side use with RLS policies
+# js/supabase-config.js (committed for public deployment)
 
 # END PACK: .gitignore (civ7-tracker)
